deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: maybank
  name: maybank-deployment
  labels:
    name: maybank-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
        - name: web-server
          image: kimb88/hello-world-spring-boot
          volumeMounts:
            - name: persistent-storage
              mountPath: /data
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-claim
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: web-server
              topologyKey: "topology.kubernetes.io/zone"
