service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: maybank
  name: maybank-webapp-service
spec:
  selector:
    app: web-server
  ports:
    - name: http
      port: 80
      # this is the port your web service is listening on
      targetPort: 8080
