service_with_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: maybank
  name: maybank-webapp-service
spec:
  selector:
    app: web-server
  ports:
    - name: http
      port: 80
      # this is the port your web service is listening on
      targetPort: 8080
      #has to be over 30000.  exposes outside cluster when uses type = NodePort
      nodePort: 31080

  type: NodePort
